[project]
name = "clinical-triage-agent"
version = "0.1.0"
description = "Clinical triage OpenEnv environment"
requires-python = ">=3.10"

dependencies = [
    "openenv-core[core]>=0.2.2",
    "faker>=25.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0"
]

[project.scripts]
server = "server.app:main"