[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-clinical-triage-agent"
version = "0.1.0"
description = "Clinical Triage Agent environment for OpenEnv – emergency department triage simulation"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "faker>=25.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "clinical_triage_agent.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "clinical_triage_agent",
    "clinical_triage_agent.env",
    "clinical_triage_agent.server",
]
package-dir = {
    "clinical_triage_agent" = ".",
    "clinical_triage_agent.env" = "env",
    "clinical_triage_agent.server" = "server",
}
